[gd_scene load_steps=16 format=3 uid="uid://byuy7b0a87145"]

[ext_resource type="Script" path="res://addons/scatterbox/scatterBox3D.gd" id="1_00bmp"]
[ext_resource type="ArrayMesh" uid="uid://cphvxowdhpyxs" path="res://tree1.obj" id="2_m7nam"]
[ext_resource type="ArrayMesh" uid="uid://c82e6hpg6t5kw" path="res://deadTree.obj" id="3_kgixs"]
[ext_resource type="Texture2D" uid="uid://bil246t4yiq8y" path="res://dead_tree_tex.png" id="4_4q817"]

[sub_resource type="PlaneMesh" id="PlaneMesh_ipgsw"]
size = Vector2(10, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2gnoy"]
albedo_color = Color(0.219608, 0.556863, 0.211765, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_044ut"]
data = PackedVector3Array(5, 0, 5, -5, 0, 5, 5, 0, -5, -5, 0, 5, -5, 0, -5, 5, 0, -5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_6drcc"]
data = PackedVector3Array(5, 0, 5, -5, 0, 5, 5, 0, -5, -5, 0, 5, -5, 0, -5, 5, 0, -5)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_obt8j"]

[sub_resource type="Sky" id="Sky_n44n5"]
sky_material = SubResource("ProceduralSkyMaterial_obt8j")

[sub_resource type="Environment" id="Environment_ts1rx"]
background_mode = 2
sky = SubResource("Sky_n44n5")
ambient_light_color = Color(0.411765, 0.411765, 0.411765, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uhqq5"]
albedo_texture = ExtResource("4_4q817")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fannj"]
albedo_texture = ExtResource("4_4q817")

[sub_resource type="MultiMesh" id="MultiMesh_rx843"]
transform_format = 1
instance_count = 30
mesh = ExtResource("3_kgixs")
buffer = PackedFloat32Array(-0.816324, 0, -0.655208, 117.383, 0, 1.04066, 0, -0.264558, 0.833421, 0, -0.641768, 51.9261, 0.750912, 0, 0.400041, -14.3678, 0, 1.16944, 0, -0.415194, -0.259598, 0, 1.15716, -37.1916, 0.467363, 0, -0.664239, -11.2647, 0, 0.882155, 0, -0.425403, 0.784926, 0, 0.395503, 80.3759, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -0.0759826, 0, 0.789278, -36.7007, 0, 1.15789, 0, -0.250488, -0.794254, 0, -0.0755067, 55.0556, 0.43284, 0, -0.761855, -30.0669, 0, 0.944461, 0, -0.340136, 1.11363, 0, 0.296114, 59.3347, -0.43963, 0, 0.954108, -21.4592, 0, 1.11563, 0, -0.675543, -0.706959, 0, -0.593323, 58.0529, -0.472968, 0, 0.77702, 34.2587, 0, 1.13644, 0, -0.536031, -0.941572, 0, -0.39031, 52.0599, -0.337993, 0, -1.0691, 48.963, 0, 0.798114, 0, -0.664079, 0.745306, 0, -0.484832, 36.96, -0.141827, 0, -0.765475, 37.8332, 0, 1.03801, 0, -0.337261, 0.81688, 0, -0.132902, 12.8747, 1.0243, 0, -0.547594, 14.1111, 0, 0.950621, 0, -0.277442, 0.537709, 0, 1.04313, -14.4351, -1.22783, 0, 0.113361, 30.2545, 0, 1.13872, 0, -0.557542, -0.144928, 0, -0.960386, -11.4302, -1.04864, 0, 0.183889, 25.7657, 0, 1.09596, 0, -0.507906, -0.160421, 0, -1.20204, -12.1457, -0.774238, 0, -0.73184, 37.9206, 0, 0.875835, 0, -0.683363, 0.572583, 0, -0.989583, -7.42975, 0.41027, 0, 1.16059, 56.1929, 0, 0.788956, 0, -0.650721, -1.11158, 0, 0.428358, 26.7041, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1.12031, 0, -0.423923, -37.6371, 0, 1.05905, 0, -0.601122, 0.445724, 0, -1.06551, 1.06417, -0.156046, 0, 0.790822, -26.339, 0, 1.00011, 0, -0.73379, -0.945059, 0, -0.130579, 9.39306, 0.932627, 0, 0.222808, -8.80317, 0, 0.902693, 0, -0.264648, -0.204251, 0, 1.01736, -6.53467, -0.272696, 0, 1.10026, -8.37781, 0, 0.998662, 0, -0.599905, -0.770919, 0, -0.389194, -2.42901, -0.38794, 0, -0.798511, -1.6219, 0, 1.02296, 0, -0.419477, 0.704895, 0, -0.439462, -4.82393, -1.03807, 0, -0.0458895, -16.788, 0, 1.10891, 0, -0.328028, 0.0389133, 0, -1.22417, -9.76153, 1.13862, 0, -0.0760821, -7.96982, 0, 1.17438, 0, -0.51466, 0.0702858, 0, 1.23252, 4.48669, 0.588766, 0, 0.708425, -25.8168, 0, 0.804294, 0, -0.477918, -1.04557, 0, 0.398916, -0.937831, -1.08507, 0, -0.2534, -22.5345, 0, 0.931039, 0, -0.357575, 0.233146, 0, -1.17933, 8.73911, -0.47099, 0, 0.767842, -19.3942, 0, 0.7619, 0, -0.378635, -1.0327, 0, -0.350196, 35.6927, -0.884371, 0, -0.372773, -15.421, 0, 0.9339, 0, -0.266365, 0.336408, 0, -0.979969, 33.8158, -0.942465, 0, -0.138677, -17.34, 0, 1.0493, 0, -0.477872, 0.134569, 0, -0.97124, 31.3678, 0.897091, 0, 0.49293, -19.3214, 0, 0.929123, 0, -0.370287, -0.388127, 0, 1.13933, 28.881, 0.922475, 0, 0.136851, -16.6589, 0, 0.853799, 0, -0.474078, -0.123228, 0, 1.02445, 33.972)

[sub_resource type="MultiMesh" id="MultiMesh_c4o5r"]
transform_format = 1
instance_count = 29
mesh = ExtResource("2_m7nam")
buffer = PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.846147, 0, -0.100692, -6.36594, 0, 1.12641, 0, -0.372701, 0.0689003, 0, 1.23657, 66.5326, -0.182259, 0, -0.902821, 27.2167, 0, 0.841828, 0, -0.577236, 0.803278, 0, -0.204845, 63.8628, 0.661411, 0, 0.715479, 19.7852, 0, 1.02497, 0, -0.466128, -0.864954, 0, 0.54711, 67.2013, -0.81441, 0, 0.308063, 33.1939, 0, 0.914582, 0, -0.692601, -0.222284, 0, -1.12869, -4.0349, 0.118037, 0, 1.11739, 24.1496, 0, 0.802781, 0, -0.600859, -0.883325, 0, 0.149315, -11.008, 0.974915, 0, -0.453739, 21.212, 0, 1.08349, 0, -0.388693, 0.678531, 0, 0.651933, -6.67011, -1.13506, 0, 0.286304, 41.7686, 0, 0.857969, 0, -0.578407, -0.379735, 0, -0.855789, -14.5062, 0.995208, 0, -0.181614, 47.7474, 0, 1.22679, 0, -0.664998, 0.14805, 0, 1.22083, 38.4391, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -0.952158, 0, 0.79233, -35.2902, 0, 1.23684, 0, -0.640608, -0.782853, 0, -0.963684, 2.75498, 0.200015, 0, -1.08558, -24.0638, 0, 0.97681, 0, -0.580999, 0.807467, 0, 0.268906, -6.41436, -0.0607854, 0, -0.801503, -22.4741, 0, 0.987733, 0, -0.432183, 1.17079, 0, -0.0416125, -1.56218, -0.286262, 0, -0.822287, -22.8163, 0, 1.09346, 0, -0.579818, 0.712436, 0, -0.330401, -9.23091, -0.425865, 0, 0.896272, -27.0652, 0, 1.0491, 0, -0.550397, -0.649194, 0, -0.587945, -2.5814, -0.49593, 0, -0.677868, -25.5224, 0, 0.874982, 0, -0.318635, 1.02048, 0, -0.329429, -0.983668, 0.244657, 0, 1.07289, -10.4382, 0, 1.05742, 0, -0.277406, -0.712402, 0, 0.368457, -11.5572, 0.265404, 0, -1.17084, -10.1169, 0, 0.914547, 0, -0.689823, 1.19741, 0, 0.259516, -1.30051, 0.479933, 0, -0.684948, -25.8594, 0, 1.06567, 0, -0.29171, 0.715521, 0, 0.459426, 7.74403, -0.691287, 0, -0.427834, -28.837, 0, 1.21539, 0, -0.487018, 0.411939, 0, -0.71796, 4.0414, 0.604564, 0, -0.651577, -17.4448, 0, 1.09458, 0, -0.272914, 0.48074, 0, 0.819403, 0.686743, -0.687601, 0, 0.888775, -7.8757, 0, 0.872944, 0, -0.490725, -0.870009, 0, -0.702431, -4.69204, 0.395312, 0, -0.715425, -21.8507, 0, 1.16349, 0, -0.66309, 0.966038, 0, 0.292759, 13.4843, -0.418029, 0, -0.915081, -5.02908, 0, 0.841637, 0, -0.606508, 0.895039, 0, -0.427389, 6.11604, -0.897054, 0, -0.150701, -6.53069, 0, 1.20401, 0, -0.532823, 0.128353, 0, -1.05324, 23.8116, -0.252572, 0, 0.810351, -12.5374, 0, 0.990122, 0, -0.669731, -0.922933, 0, -0.221763, 20.0096, -0.182803, 0, -0.906143, -15.0851, 0, 0.754727, 0, -0.621373, 0.828923, 0, -0.199832, 35.1663, -0.384554, 0, 0.936455, -9.0604, 0, 1.14312, 0, -0.287524, -1.04453, 0, -0.344766, 32.0853, 0.00483247, 0, 0.961943, -6.42294, 0, 0.900486, 0, -0.729237, -1.05118, 0, 0.00442222, 25.024)

[node name="root" type="Node3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(17.7408, 0, 0, 0, 1.8, 0, 0, 0, 13.9087, 29, 0, 10)
mesh = SubResource("PlaneMesh_ipgsw")
surface_material_override/0 = SubResource("StandardMaterial3D_2gnoy")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_044ut")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(11.088, 0, 0, 0, 1.8, 0, 0, 0, 10.656, 114.03, 19, 0)
mesh = SubResource("PlaneMesh_ipgsw")
surface_material_override/0 = SubResource("StandardMaterial3D_2gnoy")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_6drcc")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.689318, 0.150941, -0.70856, 0.0296272, 0.971363, 0.235747, 0.723853, -0.183497, 0.665106, -29.2054, 5.46726, 84.6648)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.819302, 0.349088, -0.454842, 1.73955e-08, 0.79329, 0.608844, 0.573362, -0.498827, 0.649944, 22.8811, 17.0385, 62.4693)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ts1rx")

[node name="ScatterBox3D" type="Node3D" parent="."]
script = ExtResource("1_00bmp")
meshes = Array[Mesh]([ExtResource("3_kgixs"), ExtResource("2_m7nam")])
mesh_materials = Array[Material]([SubResource("StandardMaterial3D_uhqq5"), SubResource("StandardMaterial3D_fannj")])
offset_position = Vector3(0, -1.5, 0)
count = 1
placement_size = Vector3(20, 10, 20)
random_rotation = Vector3(0, 180, 0)

[node name="DrawPointer" type="Node3D" parent="ScatterBox3D"]
transform = Transform3D(1, -3.17964e-07, 3.1665e-07, -8.6311e-10, 0.999969, -1.07684e-08, -5.02914e-07, 6.34464e-09, 0.999984, -13.5145, 0, 37.6673)

[node name="ObjectParent" type="Node3D" parent="ScatterBox3D"]

[node name="@@81102" type="MultiMeshInstance3D" parent="ScatterBox3D/ObjectParent"]
multimesh = SubResource("MultiMesh_rx843")

[node name="@@81103" type="MultiMeshInstance3D" parent="ScatterBox3D/ObjectParent"]
multimesh = SubResource("MultiMesh_c4o5r")
